# CYOA_TUI

./: .env.example  .gitignore  CODEWIKI.md  LICENSE  README.md  app.py  docker-compose.yml  download_model.py  events.py  graph_db.py  llm_backend.py  loading_art.md  log.txt  main.py  models.py  pyproject.toml  rag_memory.py  story.md  story_logger.py  styles.tcss  test_css.py  theme_loader.py  ui_components.py  workflow.md
.githooks/: pre-commit  pre-push
.github/workflows/: quality.yml  release.yml
cyoa/: cli.py
cyoa/core/: circuit_breaker.py  constants.py  engine.py  events.py  mementos.py  model_download.py  models.py  observability.py  ports.py  preflight.py  rag.py  runtime.py  state.py  support.py  theme_loader.py  user_config.py  utils.py
cyoa/db/: graph_db.py  rag_memory.py  story_logger.py
cyoa/llm/: broker.py  llm_backend.py  pipeline.py  providers.py
cyoa/llm/templates/: system_prompt.j2
cyoa/ui/: app.py  ascii_art.py  commands.py  components.py  keybindings.py  presenters.py  styles.tcss
cyoa/ui/mixins/: __init__.py  contracts.py  events.py  navigation.py  persistence.py  rendering.py  theme.py  typewriter.py
docs/: advanced-setup.md  consumer-guide.md  inventory-combination-evaluation.md  non-docker-neo4j.md  release-readiness-verification.md
monitoring/: otel-collector-config.yaml
monitoring/grafana/dashboards/: llm_observability.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
scripts/: build_binary.py  check_coverage.py  install_git_hooks.sh  run_smoke.sh  validate_themes.py
tests/: __init__.py  conftest.py  test_broker_cache.py  test_circuit_breaker.py  test_coverage_gate.py  test_db_integration.py  test_debug.py  test_deployment_config.py  test_engine_state.py  test_llm_providers.py  test_main.py  test_model_download.py  test_models.py  test_observability.py  test_packaging.py  test_perf.py  test_preflight.py  test_rag.py  test_speculative_interruption.py  test_story.py  test_story_logger.py  test_themes.py  test_tui.py  test_ui_units.py  test_user_paths.py
tests/fixtures/themes/failing/: locked_surface_too_close.toml  muted_surface_too_close.toml
tests/fixtures/themes/passing/: valid_theme.toml
themes/: dark_dungeon.toml  haunted_observatory.toml  neon_heist.toml  space_explorer.toml  sunken_realm.toml  themes.json
