[project]
name = "cyoa-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "huggingface-hub[cli]==0.24.6",
    "jinja2>=3.1.6",
    "jiter>=0.13.0",
    "llama-cpp-python>=0.3.16",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "textual>=8.0.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "no_worker_mock: skip the autouse mock_textual_workers fixture for tests using app.run_test()",
]
