[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cyoa-tui"
version = "0.1.0"
description = "Terminal-first AI choose-your-own-adventure fiction with Textual and local LLM support."
readme = "README.md"
requires-python = ">=3.13"
scripts = { cyoa-tui = "cyoa.cli:main" }
dependencies = [
    "chromadb>=1.5.5",
    "huggingface-hub[cli]==0.24.6",
    "jinja2>=3.1.6",
    "jiter>=0.13.0",
    "llama-cpp-python>=0.3.16",
    "neo4j>=6.1.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-semantic-conventions>=0.61b0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "textual>=8.0.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "genbadge[coverage]>=1.1.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "no_worker_mock: skip the autouse mock_textual_workers fixture for tests using app.run_test()",
    "smoke: fast operational smoke coverage for startup validation, provider boot, and save/load flow",
]

[tool.coverage.run]
branch = true
source = ["cyoa"]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2

[tool.coverage.json]
output = "coverage.json"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.lint.isort]
known-first-party = ["cyoa"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["cyoa*"]
